2008-08-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCalendar.t
	* xs/GtkCalendar.xs: Wrap gtk_calendar_get_detail_width_chars,
	gtk_calendar_set_detail_width_chars,
	gtk_calendar_get_detail_height_rows and
	gtk_calendar_set_detail_height_rows.

2008-08-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkPixmap.xs
	* xs/GtkGC.xs
	* xs/PangoCairo.xs: Add hierarchy sections to the unregistered
	custom subclasses Gtk2::Gdk::Bitmap, Gtk2::GC, and
	Gtk2::Pango::Cairo::Context.

	* t/GdkWindow.t
	* xs/GdkWindow.xs: Wrap gdk_window_redirect_to_drawable and
	gdk_window_remove_redirection.

	* t/GdkScreen.t
	* xs/GdkScreen.xs: Wrap gdk_screen_get_monitor_height_mm,
	gdk_screen_get_monitor_width_mm, and
	gdk_screen_get_monitor_plug_name.

	* t/GtkClipboard.t
	* xs/GtkSelection.xs: Use gtk_selection_data_get_target,
	gtk_selection_data_get_data_type, gtk_selection_data_get_format,
	gtk_selection_data_get_data, and gtk_selection_data_get_display if
	available to implement the accessors
	Gtk2::SelectionData->get_[thing].  Deprecate
	Gtk2::SelectionData->[thing].

	* MANIFEST
	* xs_files-2.14
	* t/GtkShow.t
	* xs/GtkShow.xs: Wrap gtk_show_uri.

	* t/01.GtkWindow.t
	* xs/GtkWindow.xs: Wrap gtk_window_get_default_widget and
	gtk_window_group_list_windows.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Wrap gtk_widget_get_snapshot.

	* MANIFEST
	* maps-2.14
	* xs_files-2.14
	* t/GtkToolShell.t
	* xs/GtkToolShell.xs: Wrap GtkToolShell.

	* t/GtkToolItem.t
	* xs/GtkToolItem.xs: Wrap gtk_tool_item_toolbar_reconfigured.

	* t/GtkTooltip.t
	* xs/GtkTooltip.xs: Wrap gtk_tooltip_set_icon_from_icon_name.

	* t/GtkStatusIcon.t
	* xs/GtkStatusIcon.xs: Wrap gtk_status_icon_get_x11_window_id.

2008-08-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkSocket-GtkPlug.t
	* xs/GtkSocket.xs: Wrap gtk_socket_get_plug_window.

	* t/GtkScaleButton.t
	* xs/GtkScaleButton.xs: Wrap gtk_scale_button_get_popup,
	gtk_scale_button_get_plus_button, and
	gtk_scale_button_get_minus_button.
