@@ -23,23 +23,33 @@
 
 MODULE = Gtk2::ColorSelectionDialog	PACKAGE = Gtk2::ColorSelectionDialog	PREFIX = gtk_color_selection_dialog_
 
+=for apidoc colorsel __hide__
+=cut
 
 GtkWidget *
-colorsel (dialog)
+get_color_selection (dialog)
 	GtkColorSelectionDialog *dialog
     ALIAS:
-	ok_button = 1
-	cancel_button = 2
-	help_button = 3
+	colorsel = 1
+	ok_button = 2
+	cancel_button = 3
+	help_button = 4
     CODE:
 	switch (ix) {
-		case 0: RETVAL = dialog->colorsel; break;
-		case 1: RETVAL = dialog->ok_button; break;
-		case 2: RETVAL = dialog->cancel_button; break;
-		case 3: RETVAL = dialog->help_button; break;
-		default:
-			RETVAL = NULL;
-			g_assert_not_reached ();
+	    case 0:
+	    case 1:
+#if GTK_CHECK_VERSION (2, 13, 6) /* FIXME: 2.14 */
+		RETVAL = gtk_color_selection_dialog_get_color_selection (dialog);
+#else
+		RETVAL = dialog->colorsel;
+#endif /* 2.14 */
+		break;
+	    case 2: RETVAL = dialog->ok_button; break;
+	    case 3: RETVAL = dialog->cancel_button; break;
+	    case 4: RETVAL = dialog->help_button; break;
+	    default:
+		RETVAL = NULL;
+		g_assert_not_reached ();
 	}
     OUTPUT:
 	RETVAL
